# TraitCal

./: .gitignore  pyproject.toml
examples/: calendar_example.jsonc  traits_example.jsonc
traitcal/: main.py  traitcal.py
